Correct spacing issues with margin and padding
Added padding 10px to header class. Added margin 0 and padding 4px to ul class

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
 
 .logo {
@@ -18,6 +19,8 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 4px;
 }
 
 a {
